# triangle

./: CMakeLists.txt  README.md
include/: gl_calls.h
include/glad/: glad.h
shader/: fragment.glsl  vertex.glsl
src/: gl_calls.c  glad.c  main.c
